[gd_scene load_steps=21 format=3 uid="uid://bota11l8ry5of"]

[ext_resource type="Texture2D" uid="uid://62858d8lhofh" path="res://Art/PlayerSprites/BaseSprite.png" id="1_isnvf"]
[ext_resource type="Script" path="res://boss_level_one.gd" id="1_quwi3"]
[ext_resource type="Texture2D" uid="uid://che44m2ikxxbk" path="res://Art/PlayerSprites/RealSpriteDown.png" id="2_2vsos"]
[ext_resource type="Script" path="res://FiniteStateMachine.gd" id="3_0lfhr"]
[ext_resource type="Script" path="res://Idle.gd" id="5_ei8tw"]
[ext_resource type="Script" path="res://Shoot.gd" id="6_ubco3"]
[ext_resource type="Script" path="res://Dash.gd" id="7_ktvk2"]
[ext_resource type="Texture2D" uid="uid://cnj70e5ms3css" path="res://Art/UIArt/EnemyHealthBar.png" id="8_odu0u"]
[ext_resource type="Texture2D" uid="uid://dmb7y20rb4p3q" path="res://Art/UIArt/EnemyHealthBar-sheet.png" id="9_6yaom"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bxnf7"]
atlas = ExtResource("1_isnvf")
region = Rect2(0, 0, 50, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_jinpt"]
atlas = ExtResource("2_2vsos")
region = Rect2(100, 0, 50, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb84x"]
atlas = ExtResource("2_2vsos")
region = Rect2(200, 0, 50, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrejk"]
atlas = ExtResource("2_2vsos")
region = Rect2(0, 0, 50, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_8doeh"]
atlas = ExtResource("2_2vsos")
region = Rect2(50, 0, 50, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_hh06g"]
atlas = ExtResource("2_2vsos")
region = Rect2(100, 0, 50, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_shyar"]
atlas = ExtResource("2_2vsos")
region = Rect2(150, 0, 50, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qoor"]
atlas = ExtResource("2_2vsos")
region = Rect2(200, 0, 50, 75)

[sub_resource type="SpriteFrames" id="SpriteFrames_d3hxy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxnf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jinpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb84x")
}],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrejk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8doeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hh06g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shyar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qoor")
}],
"loop": true,
"name": &"MOVE",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lmcl5"]
radius = 87.0
height = 286.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cm2q5"]
radius = 107.0
height = 306.0

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_quwi3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_d3hxy")
animation = &"IDLE"
autoplay = "IDLE"
frame = 2
frame_progress = 0.245408

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_lmcl5")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_cm2q5")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 2

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("3_0lfhr")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("5_ei8tw")

[node name="Shoot" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_ubco3")

[node name="BulletHell" type="Node2D" parent="FiniteStateMachine"]

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_ktvk2")

[node name="SpawnMinions" type="Node2D" parent="FiniteStateMachine"]

[node name="ShootCooldownTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.75

[node name="DashTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="UIHealthbar" type="TextureProgressBar" parent="."]
offset_left = -98.0
offset_top = 164.0
offset_right = -50.0
offset_bottom = 174.0
scale = Vector2(4, 4)
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2
texture_under = ExtResource("8_odu0u")
texture_progress = ExtResource("9_6yaom")
texture_progress_offset = Vector2(2.08165e-12, 2.08165e-12)

[connection signal="timeout" from="ShootCooldownTimer" to="FiniteStateMachine/Shoot" method="_on_shoot_cooldown_timer_timeout"]
[connection signal="timeout" from="DashCooldown" to="FiniteStateMachine/Dash" method="_on_timer_timeout"]
